--- a/PDP_proc/MDK-ARM/PDP_proc Configuration/PDP_proc Configuration.build_log.htm
+++ b/PDP_proc/MDK-ARM/PDP_proc Configuration/PDP_proc Configuration.build_log.htm
@@ -3,58 +3,33 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-C:\Unilectric\processor\PDP_proc\MDK-ARM\PDP_proc.uvproj
+C:\Unilectric\Git\PDP_proc\MDK-ARM\PDP_proc.uvproj
 Project File Date:  10/13/2015
 
 <h2>Output:</h2>
 Build target 'PDP_proc Configuration'
-compiling system_stm32f4xx.c...
-compiling stm32f4xx_hal_tim.c...
-compiling stm32f4xx_hal_cortex.c...
-compiling stm32f4xx_hal_flash_ex.c...
-compiling stm32f4xx_hal_pwr.c...
-compiling stm32f4xx_hal.c...
-compiling stm32f4xx_hal_dma_ex.c...
-compiling stm32f4xx_hal_gpio.c...
-compiling stm32f4xx_hal_rcc_ex.c...
-compiling stm32f4xx_hal_rcc.c...
-compiling stm32f4xx_hal_pwr_ex.c...
-compiling stm32f4xx_hal_dma.c...
-compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_hal_adc_ex.c...
-compiling stm32f4xx_hal_spi.c...
-compiling stm32f4xx_hal_tim_ex.c...
-compiling stm32f4xx_hal_adc.c...
-compiling stm32f4xx_hal_uart.c...
-compiling stm32f4xx_hal_i2c_ex.c...
-compiling stm32f4xx_hal_i2c.c...
-compiling stm32f4xx_it.c...
-compiling usart.c...
-compiling gpio.c...
-compiling spi.c...
-compiling adc.c...
-compiling dma.c...
-compiling main.c...
-..\Src\main.c(96): warning:  #177-D: variable "val8" was declared but never referenced
-        uint8 val8;
-..\Src\main.c(98): warning:  #177-D: variable "val32" was declared but never referenced
-        uint32 val32;           
-..\Src\main.c: 2 warnings, 0 errors
-compiling tim.c...
-compiling stm32f4xx_hal_msp.c...
-compiling i2c.c...
-compiling uni_adc.c...
-compiling uni_command.c...
-..\Src\uni_command.c(117): warning:  #177-D: variable "index" was declared but never referenced
-        uint32 i, index;
-..\Src\uni_command.c(119): warning:  #177-D: variable "saved_val8" was declared but never referenced
-        static uint8 saved_val8;
-..\Src\uni_command.c(120): warning:  #177-D: variable "val16" was declared but never referenced
-        static uint16 val16;
-..\Src\uni_command.c(121): warning:  #177-D: variable "val32" was declared but never referenced
-        static uint32 val32;
-..\Src\uni_command.c: 4 warnings, 0 errors
+compiling uni_power.c...
+..\Src\uni_power.c(146): warning:  #177-D: variable "offset_test" was declared but never referenced
+        float offset_test;
+..\Src\uni_power.c(148): warning:  #550-D: variable "best_offset" was set but never used
+        float best_offset;
+..\Src\uni_power.c(188): warning:  #177-D: variable "cross_down" was declared but never referenced
+        bool cross_down = false;
+..\Src\uni_power.c(266): warning:  #550-D: variable "vcycle_end" was set but never used
+        uint32 vcycle_start, vcycle_end;
+..\Src\uni_power.c: 4 warnings, 0 errors
+linking...
+Program Size: Code=22400 RO-data=456 RW-data=48 ZI-data=140080  
+"PDP_proc Configuration\PDP_proc Configuration.axf" - 0 Error(s), 4 Warning(s).
+Load "PDP_proc Configuration\\PDP_proc Configuration.axf" 
+Erase Done.
+Programming Done.
+Verify OK.
+Application running ...
+</pre>
+</body>
+</html>
+ors
 compiling uni_power.c...
 ..\Src\uni_power.c(146): warning:  #177-D: variable "offset_test" was declared but never referenced
         float offset_test;
@@ -73,23 +48,10 @@ compiling uni_eeprom.c...
 ..\Src\uni_eeprom.c: 1 warning, 0 errors
 compiling uni_voltage.c...
 linking...
-Program Size: Code=22332 RO-data=456 RW-data=48 ZI-data=139904  
+Program Size: Code=22376 RO-data=456 RW-data=48 ZI-data=140080  
 "PDP_proc Configuration\PDP_proc Configuration.axf" - 0 Error(s), 11 Warning(s).
-Load "PDP_proc Configuration\\PDP_proc Configuration.axf" 
-Error: Flash Download failed  -  Target DLL has been cancelled
-Load "PDP_proc Configuration\\PDP_proc Configuration.axf" 
-Erase Done.
-Programming Done.
-Verify OK.
-Load "PDP_proc Configuration\\PDP_proc Configuration.axf" 
-Erase Done.
-Programming Done.
-Verify OK.
 Load "PDP_proc Configuration\\PDP_proc Configuration.axf" 
 Erase Done.
 Programming Done.
 Verify OK.
 Application running ...
-</pre>
-</body>
-</html>
