--- a/PDP_proc/MDK-ARM/PDP_proc Configuration/PDP_proc Configuration.htm
+++ b/PDP_proc/MDK-ARM/PDP_proc Configuration/PDP_proc Configuration.htm
@@ -3,9 +3,9 @@
 <title>Static Call Graph - [PDP_proc Configuration\PDP_proc Configuration.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image PDP_proc Configuration\PDP_proc Configuration.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Wed Oct 21 12:27:35 2015
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Fri Oct 23 14:11:55 2015
 <BR><P>
-<H3>Maximum Stack Usage =        192 bytes + Unknown(Cycles, Untraceable Function Pointers)</H3><H3>
+<H3>Maximum Stack Usage =        376 bytes + Unknown(Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
 ADC_DMAConvCplt &rArr; HAL_ADC_ConvCpltCallback &rArr; power_from_ADC &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; _double_round
 <P>
@@ -499,9 +499,9 @@ Global Symbols
 <P><STRONG><a name="[65]"></a>_double_epilogue</STRONG> (Thumb, 164 bytes, Stack size 32 bytes, depilogue.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 40<LI>Call Chain = _double_epilogue &rArr; _double_round
 </UL>
-<BR>[Calls]<UL><LI><a href="#[67]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;_double_round
-<LI><a href="#[6d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_llsr
+<BR>[Calls]<UL><LI><a href="#[6d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_llsr
 <LI><a href="#[6e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_llsl
+<LI><a href="#[67]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;_double_round
 </UL>
 <BR>[Called By]<UL><LI><a href="#[69]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_ui2d
 <LI><a href="#[68]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_i2d
@@ -552,7 +552,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[70]"></a>HAL_ADC_ConvCpltCallback</STRONG> (Thumb, 24 bytes, Stack size 8 bytes, uni_adc.o(i.HAL_ADC_ConvCpltCallback))
-<BR><BR>[Stack]<UL><LI>Max Depth = 184<LI>Call Chain = HAL_ADC_ConvCpltCallback &rArr; power_from_ADC &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; _double_round
+<BR><BR>[Stack]<UL><LI>Max Depth = 368<LI>Call Chain = HAL_ADC_ConvCpltCallback &rArr; power_from_ADC &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; _double_round
 </UL>
 <BR>[Calls]<UL><LI><a href="#[76]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;power_from_ADC
 <LI><a href="#[75]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;uni_adcDMA_bytesCaptured
@@ -561,7 +561,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[72]"></a>HAL_ADC_ConvHalfCpltCallback</STRONG> (Thumb, 24 bytes, Stack size 8 bytes, uni_adc.o(i.HAL_ADC_ConvHalfCpltCallback))
-<BR><BR>[Stack]<UL><LI>Max Depth = 184<LI>Call Chain = HAL_ADC_ConvHalfCpltCallback &rArr; power_from_ADC &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; _double_round
+<BR><BR>[Stack]<UL><LI>Max Depth = 368<LI>Call Chain = HAL_ADC_ConvHalfCpltCallback &rArr; power_from_ADC &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; _double_round
 </UL>
 <BR>[Calls]<UL><LI><a href="#[76]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;power_from_ADC
 <LI><a href="#[75]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;uni_adcDMA_bytesCaptured
@@ -1060,8 +1060,8 @@ Global Symbols
 <BR><BR>[Stack]<UL><LI>Max Depth = 120<LI>Call Chain = HAL_UART_ErrorCallback &rArr; HAL_UART_Init &rArr; HAL_UART_MspInit &rArr; HAL_GPIO_Init
 </UL>
 <BR>[Calls]<UL><LI><a href="#[bb]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_UART_Init
-<LI><a href="#[bc]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;uni_uart_receive_init
 <LI><a href="#[ba]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;log_hex
+<LI><a href="#[bc]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;uni_uart_receive_init
 </UL>
 <BR>[Called By]<UL><LI><a href="#[bd]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_UART_IRQHandler
 </UL>
@@ -1088,8 +1088,8 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[d5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MX_USART6_UART_Init
 <LI><a href="#[d4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MX_USART2_UART_Init
 <LI><a href="#[d3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MX_USART1_UART_Init
-<LI><a href="#[5b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 <LI><a href="#[b9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_UART_ErrorCallback
+<LI><a href="#[5b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
 <P><STRONG><a name="[c1]"></a>HAL_UART_MspInit</STRONG> (Thumb, 194 bytes, Stack size 48 bytes, usart.o(i.HAL_UART_MspInit))
@@ -1105,17 +1105,17 @@ Global Symbols
 <P><STRONG><a name="[c3]"></a>HAL_UART_RxCpltCallback</STRONG> (Thumb, 62 bytes, Stack size 8 bytes, uni_uart.o(i.HAL_UART_RxCpltCallback))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = HAL_UART_RxCpltCallback
 </UL>
-<BR>[Calls]<UL><LI><a href="#[c4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;command_exec_rx
+<BR>[Calls]<UL><LI><a href="#[c5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;uart_receive_data
+<LI><a href="#[c4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;command_exec_rx
 <LI><a href="#[bc]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;uni_uart_receive_init
-<LI><a href="#[c5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;uart_receive_data
 </UL>
 <BR>[Called By]<UL><LI><a href="#[be]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;UART_Receive_IT
 </UL>
 
 <P><STRONG><a name="[e4]"></a>HAL_UART_Transmit_IT</STRONG> (Thumb, 106 bytes, Stack size 0 bytes, stm32f4xx_hal_uart.o(i.HAL_UART_Transmit_IT))
-<BR><BR>[Called By]<UL><LI><a href="#[e6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;log_str
+<BR><BR>[Called By]<UL><LI><a href="#[ba]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;log_hex
+<LI><a href="#[e6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;log_str
 <LI><a href="#[e5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;log_int
-<LI><a href="#[ba]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;log_hex
 </UL>
 
 <P><STRONG><a name="[c0]"></a>HAL_UART_TxCpltCallback</STRONG> (Thumb, 2 bytes, Stack size 0 bytes, uni_uart.o(i.HAL_UART_TxCpltCallback))
@@ -1291,8 +1291,8 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[f3]"></a>UART_Receive_IT</STRONG> (Thumb, 86 bytes, Stack size 0 bytes, uni_uart.o(i.UART_Receive_IT))
-<BR><BR>[Called By]<UL><LI><a href="#[bc]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;uni_uart_receive_init
-<LI><a href="#[c5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;uart_receive_data
+<BR><BR>[Called By]<UL><LI><a href="#[c5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;uart_receive_data
+<LI><a href="#[bc]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;uni_uart_receive_init
 </UL>
 
 <P><STRONG><a name="[f6]"></a>UART_Transmit_IT</STRONG> (Thumb, 86 bytes, Stack size 0 bytes, uni_uart.o(i.UART_Transmit_IT))
@@ -1330,9 +1330,9 @@ Global Symbols
 <P><STRONG><a name="[e3]"></a>__2sprintf</STRONG> (Thumb, 0 bytes, Stack size 24 bytes, printf8.o(i.__0sprintf$8))
 <BR><BR>[Stack]<UL><LI>Max Depth = 24<LI>Call Chain = __2sprintf
 </UL>
-<BR>[Called By]<UL><LI><a href="#[e6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;log_str
+<BR>[Called By]<UL><LI><a href="#[ba]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;log_hex
+<LI><a href="#[e6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;log_str
 <LI><a href="#[e5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;log_int
-<LI><a href="#[ba]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;log_hex
 </UL>
 
 <P><STRONG><a name="[db]"></a>__hardfp_sqrtf</STRONG> (Thumb, 58 bytes, Stack size 16 bytes, sqrtf.o(i.__hardfp_sqrtf))
@@ -1439,8 +1439,8 @@ Global Symbols
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> entry9a.o(.ARM.Collect$$$$0000000B)
 </UL>
-<P><STRONG><a name="[76]"></a>power_from_ADC</STRONG> (Thumb, 952 bytes, Stack size 88 bytes, uni_power.o(i.power_from_ADC))
-<BR><BR>[Stack]<UL><LI>Max Depth = 176<LI>Call Chain = power_from_ADC &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; _double_round
+<P><STRONG><a name="[76]"></a>power_from_ADC</STRONG> (Thumb, 1194 bytes, Stack size 272 bytes, uni_power.o(i.power_from_ADC))
+<BR><BR>[Stack]<UL><LI>Max Depth = 360<LI>Call Chain = power_from_ADC &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; _double_round
 </UL>
 <BR>[Calls]<UL><LI><a href="#[e2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_GPIO_WritePin
 <LI><a href="#[69]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_ui2d
@@ -1568,9 +1568,9 @@ Global Symbols
 <P><STRONG><a name="[bc]"></a>uni_uart_receive_init</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, uni_uart.o(i.uni_uart_receive_init))
 <BR><BR>[Calls]<UL><LI><a href="#[f3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;UART_Receive_IT
 </UL>
-<BR>[Called By]<UL><LI><a href="#[5b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
-<LI><a href="#[c3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_UART_RxCpltCallback
+<BR>[Called By]<UL><LI><a href="#[c3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_UART_RxCpltCallback
 <LI><a href="#[b9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_UART_ErrorCallback
+<LI><a href="#[5b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
 <P><STRONG><a name="[e0]"></a>uni_uart_transmit</STRONG> (Thumb, 28 bytes, Stack size 0 bytes, uni_uart.o(i.uni_uart_transmit))
@@ -1628,7 +1628,7 @@ Local Symbols
 </UL>
 
 <P><STRONG><a name="[5e]"></a>ADC_DMAConvCplt</STRONG> (Thumb, 30 bytes, Stack size 8 bytes, stm32f4xx_hal_adc.o(i.ADC_DMAConvCplt))
-<BR><BR>[Stack]<UL><LI>Max Depth = 192<LI>Call Chain = ADC_DMAConvCplt &rArr; HAL_ADC_ConvCpltCallback &rArr; power_from_ADC &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; _double_round
+<BR><BR>[Stack]<UL><LI>Max Depth = 376<LI>Call Chain = ADC_DMAConvCplt &rArr; HAL_ADC_ConvCpltCallback &rArr; power_from_ADC &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; _double_round
 </UL>
 <BR>[Calls]<UL><LI><a href="#[70]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_ADC_ConvCpltCallback
 </UL>
@@ -1642,7 +1642,7 @@ Local Symbols
 <BR>[Address Reference Count : 1]<UL><LI> stm32f4xx_hal_adc.o(i.HAL_ADC_Start_DMA)
 </UL>
 <P><STRONG><a name="[5f]"></a>ADC_DMAHalfConvCplt</STRONG> (Thumb, 10 bytes, Stack size 8 bytes, stm32f4xx_hal_adc.o(i.ADC_DMAHalfConvCplt))
-<BR><BR>[Stack]<UL><LI>Max Depth = 192<LI>Call Chain = ADC_DMAHalfConvCplt &rArr; HAL_ADC_ConvHalfCpltCallback &rArr; power_from_ADC &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; _double_round
+<BR><BR>[Stack]<UL><LI>Max Depth = 376<LI>Call Chain = ADC_DMAHalfConvCplt &rArr; HAL_ADC_ConvHalfCpltCallback &rArr; power_from_ADC &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; _double_round
 </UL>
 <BR>[Calls]<UL><LI><a href="#[72]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_ADC_ConvHalfCpltCallback
 </UL>
